2009-06-06
- fixed issue 90 and issue 81 : window manager's menu in panel padding
  works on openbox and pekwm. doesn't work on xfce, windowmaker ?
  tint2 send mouse event to your window manager on left/right padding
  and on top/bottom panel padding.

2009-06-05
- fixed issue 46 and 59 : urgent task
  limitation : just one urgent task at a time

2009-06-04
- patch by dmitry.medvinsky : right/left clic command

2009-06-02
- Systray Temp_Fix from keshto
  not yet perfect, but a first step

2009-05-31
- fixed issue 71 : time format %T %r

2009-05-31
- fixed issue 86 : padding bug

2009-05-31
- fixed issue 87 and 88 : battery detection

2009-05-26
- fixed memory leak and battery detection

2009-05-20
- merge patch from yarin.kaul (fixed issue 52)

2009-05-15
- merge battery applet from Sebastian Reichel <elektranox@gmail.com>

2009-03-14
- add systray option when convert tint-0.6 config file
  but you need to stop other systemtray program

2009-03-07
- fixed segfault when time1_format empty
- fixed systray : when clock change size
- fixed systray segfault when xrandr change size

2009-03-01
- fixed segfault on tray application due to tint2

2009-03-01
- cleanup code
- basic systray with some bugs
- update documentation and tintrc sample for systray

2009-02-27
- fixed issue 49 : patch from Daniel Moerner
- some systray code (doesn't work)
- cleanup code

2009-02-25
- fixed issue 48 : tint2 does't create config file on first start

2009-02-14
- fixed issue 45 : segfault without clock

2009-02-13
- improved object oriented layout
- tint2 looks good for me. if you see bugs, report it.

2009-02-12
- fixed issue 14 : no icons

2009-02-11
- fixed bug with number of desktop changed
- fixed clock resize when date changed

2009-02-08
- backward compatibility with tint-0.6 (convert config file)
  feature freeze until next release. need bug correction.

2009-02-07
- better multi-monitor capability :
  -> panel_monitor = all : tint2 draw one panel per monitor